# b-plus-tree

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
examples/: demo.cpp
include/: BPlusTree.h  Config.h  Node.h
tests/: test_allocator.cpp  test_delete.cpp  test_edge_cases.cpp  test_insert.cpp  test_min_order.cpp  test_persistence.cpp  test_range.cpp  test_search.cpp  test_statistics.cpp  test_stress.cpp  test_validate.cpp
